--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
         <link href="reset.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		    <style>
+                body {
+                    background-color: #111
+                }
 		      h1 {
 		        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-                font-size: 100px;
+                font-size: 9vw;
+                /*font-size: 100px;*/
                 position: absolute;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
 		      }
               a {
-                color: #000000;
+                color: #ededed;
               }
               a:link {
                 text-decoration: none;
