--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ layout: default
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="previous"><<<</a>
   {% else %}
-    <span class="previous"></span>
+    <span class="previous" style="font-weight: normal"><<<</span>
   {% endif %}
-  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+  <span class="page_number">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path }}" class="next">>>></a>
   {% else %}
-    <span class="next "></span>
+    <span class="next" style="font-weight: normal">>>></span>
   {% endif %}
 </div>
