move JS to index only

--- a/index.html
+++ b/index.html
@@ -37,3 +37,6 @@ layout: default
     <span class="next" style="font-weight: normal">>>></span>
   {% endif %}
 </div>
+
+
+  {% include shared/scripts.html %}
