--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default2
 ---
 
   <div class="home">
@@ -38,7 +38,3 @@ layout: default
       <span class="next" style="font-weight: normal"></span>
     {% endif %}
   </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="/scripts/jquery.fittext.js"></script>
-  <script>jQuery("#responsive_headline1").fitText(.85);</script>
